<resources>
    <string name="app_name">Inventory App</string>

    <!--Title for empty view-->
    <string name="empty_view_title">It\'s a bit empty here</string>

    <!--Subtitle for empty view-->
    <string name="empty_view_subtitle">Start by clicking the plus button</string>

    <!--Title for editing product in <EditorActivity-->
    <string name="edit_product">Edit Product</string>

    <!--Title for adding new product in EditorActivity-->
    <string name="add_new_product">Add New Product</string>

    <!--Title for deleting all products in menu item in MainActivity [CHAR LIMIT=30]-->
    <string name="delete_all">Delete all</string>

    <!--Title for inserting dummy data in menu item in MainActivity [CHAR LIMIT=30]-->
    <string name="insert_dummy_data">Insert dummy data</string>

    <!--Title for saving current product in menu item in EditorActivity [CHAR LIMIT=15]-->
    <string name="save_pet">Save</string>

    <!--Title for deleting current product in menu item in EditorActivity [CHAR LIMIT=15]-->
    <string name="delete_pet">Delete</string>

    <!--Title for Ordering current product in menu item in EditorActivity [CHAR LIMIT=15]-->
    <string name="order_pet">Order</string>

    <!-- Overview title for editor activity [CHAR LIMIT=30]-->
    <string name="overview_title">Overview</string>

    <!--Hint of name for editor activity [CHAR LIMIT=15]-->
    <string name="name_hint">Name</string>

    <!-- Measurement title for editor activity [CHAR LIMIT=30]-->
    <string name="measurement_title">Measurement</string>

    <!--Hint of quantity for editor activity [CHAR LIMIT=15]-->
    <string name="quantity_hint">Quantity</string>

    <!-- Units for price of the product (€) [CHAR LIMIT=5] -->
    <string name="price_units_euros">€</string>

    <!--Hint of price for editor activity [CHAR LIMIT=15]-->
    <string name="unit_price_hint">Unit price</string>

    <!--Hint of supplier for editor activity [CHAR LIMIT=15]-->
    <string name="supplier_hint">Supplier</string>

    <!-- Image title for editor activity [CHAR LIMIT=30]-->
    <string name="image_title">Image</string>

    <!-- Title for select image button in editor activity [CHAR LIMIT=30]-->
    <string name="select_image">Select image</string>

    <!--Title for delete confirmation dialog of current product-->
    <string name="delete_confirmation_message">Do you really want to delete current product?</string>

    <!--Title for delete confirmation dialog for all products-->
    <string name="delete_all_message">Do you really want to delete ALL products?</string>

    <!--Yes for delete confirmation dialog-->
    <string name="delete_delete_confirmation">Delete</string>

    <!--Cancel for delete confirmation dialog-->
    <string name="cancel_delete_confirmation">Cancel</string>

    <!--Toast message telling user all products have been deleted-->
    <string name="toast_message_delete_all">All products have been deleted</string>

    <!--Title for unsaved changes dialog-->
    <string name="unsaved_changes_message">You have unsaved changes. Do you really want to leave?</string>

    <!--Positive choice for leaving without saving-->
    <string name="leave_unsaved_changes">Leave</string>

    <!--Negative choice for keeping editing-->
    <string name="keep_editing">Keep editing</string>

    <!--Subject title for ordering product through email-->
    <string name="email_subject">Order new product</string>

    <!--Message for ordering product-->
    <string name="order_product_message">Hello, we would like to order the product with following information from you.</string>

    <!--Part of message for ordering product-->
    <string name="best_regards">Best regards!</string>

    <!--Image uri for inserting dummy data-->
    <string name="dummy_data_image_uri">android.resource://com.example.omniata.inventoryapp/drawable/valio_rahka</string>

    <!--Toast message for empty product name-->
    <string name="toast_msg_empty_name">Product must have a name</string>

    <!--Toast message for empty product supplier-->
    <string name="toast_msg_empty_supplier">Product must have a supplier</string>

    <!--Toast message for price lower than 0-->
    <string name="toast_msg_price_less_than_zero">Product\'s price cannot be less than zero</string>

    <!--Toast message for empty product price-->
    <string name="toast_msg_empty_price">Product must have a price</string>

    <!--Toast message for empty product quantity-->
    <string name="toast_msg_empty_quantity">Product must have quantity</string>

    <!--Toast message for product's quantity less than zero-->
    <string name="toast_msg_quantity_less_than_zero">Product\'s quantity cannot be less than zero</string>

    <!--Toast message for product's quantity more than 500-->
    <string name="toast_msg_quantity_more_than_limit">Quantity value more than 500 is out of scope</string>

    <!--Toast message for empty product image-->
    <string name="toast_msg_empty_image">Product must have an image</string>

    <!--Toast message warning user product is out of stock-->
    <string name="product_out_of_stock"> out of stock</string>

    <!--Toast message telling user new product added successfully-->
    <string name="new_product_added_successfully">New product added</string>

    <!--Toast message telling user product modified successfully-->
    <string name="product_modified_successfully">Product saved</string>

    <!--Content description for empty view-->
    <string name="empty_view_description">This shows up where there is no list</string>

    <!--Content description for minus button used to decrease product quantity-->
    <string name="decrease_quantity_description">This button is used to decrease product quantity</string>

    <!--Content description for plus button used to increase product quantity-->
    <string name="increase_quantity_description">This button is used to increase product quantity</string>

    <!--Content description for product image-->
    <string name="product_image">Here shows up the product image</string>

</resources>
