<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/overview"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/overview_title" />

        <LinearLayout
            android:id="@+id/overview_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name_hint"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_hint"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/measurement_title" />

        <LinearLayout
            android:id="@+id/quantity_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <RelativeLayout
                android:id="@+id/unit_price_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_unit_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/unit_price_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/EditorUnitsStyle"
                    android:text="@string/price_units_euros" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_remove_circle_outline_black_24dp"/>

                <EditText
                    android:id="@+id/product_quantity"
                    style="@style/EditorFieldStyle"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:hint="@string/quantity_hint"
                    android:inputType="number"/>


                <ImageButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_circle_outline_black_24dp"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>